[gd_scene load_steps=7 format=2]

[ext_resource path="res://GP shot.png" type="Texture" id=1]
[ext_resource path="res://GP stand.png" type="Texture" id=2]
[ext_resource path="res://BadGuy.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "bes",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 10.0933
height = 91.9444

[sub_resource type="CircleShape2D" id=3]
radius = 487.218

[node name="BadGuy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.6, 0.6 )
frames = SubResource( 1 )
animation = "bes"
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 9 )
rotation = -3.14159
shape = SubResource( 2 )

[node name="Sight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sight"]
shape = SubResource( 3 )

[node name="TurnAxis" type="Position2D" parent="."]

[node name="CastPoint" type="Position2D" parent="TurnAxis"]
position = Vector2( 20.835, 2.976 )
[connection signal="body_entered" from="Sight" to="." method="_on_Sight_body_entered"]
[connection signal="body_exited" from="Sight" to="." method="_on_Sight_body_exited"]
